--- a/package.json
+++ b/package.json
@@ -38,7 +38,12 @@
     "last 2 versions"
   ],
   "mateAcademy": {
-    "projectType": "layout"
+    "projectType": "layout",
+    "linters": {
+      "bem": false
+    }
   },
-  "dependencies": {}
+  "dependencies": {
+    "cross-env": "^7.0.3"
+  }
 }
