--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gulp-boilerplate",
+  "name": "catalog-page",
   "version": "1.0.0",
-  "description": "Frontend boilerplate based on gulp",
-  "main": "index.js",
+  "description": "Frontend practice with catalog page",
+  "main": "src/main.js",
   "scripts": {
     "init": "mate-scripts init",
     "start": "mate-scripts start",
@@ -19,10 +19,13 @@
   "license": "GPL-3.0",
   "devDependencies": {
     "@linthtml/linthtml": "^0.3.2",
+    "@mate-academy/backstop-config": "*",
+    "@mate-academy/bemlint": "^0.1.1",
     "@mate-academy/eslint-config": "*",
     "@mate-academy/linthtml-config": "0.0.1",
-    "@mate-academy/scripts": "^0.8.8",
-    "@mate-academy/stylelint-config": "0.0.9",
+    "@mate-academy/scripts": "^0.8.6",
+    "@mate-academy/stylelint-config": "*",
+    "backstopjs": "^5.0.1",
     "colors": "^1.3.3",
     "eslint": "^5.16.0",
     "eslint-plugin-node": "^9.0.1",
@@ -38,12 +41,7 @@
     "last 2 versions"
   ],
   "mateAcademy": {
-    "projectType": "layout",
-    "linters": {
-      "bem": false
-    }
+    "projectType": "layout"
   },
-  "dependencies": {
-    "cross-env": "^7.0.3"
-  }
+  "dependencies": {}
 }
