--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
       "bem": false
     }
   },
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^5.0.1",
+    "jquery": "^3.6.0"
+  }
 }
