--- a/.linthtmlrc.json
+++ b/.linthtmlrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": "@mate-academy/linthtml-config"
+  "extends": "@mate-academy/linthtml-config",
+
+  "parserOptions": {
+    "sourceType": "script",
+    "ecmaVersion": 11
+  }
 }
