--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
   "author": "Mate Academy",
   "license": "GPL-3.0",
   "devDependencies": {
+    "@babel/core": "^7.17.8",
     "@linthtml/linthtml": "^0.8.3",
     "@mate-academy/bemlint": "^0.1.1",
     "@mate-academy/eslint-config": "*",
     "@mate-academy/linthtml-config": "0.0.2",
     "@mate-academy/scripts": "^0.9.14",
     "@mate-academy/stylelint-config": "0.0.9",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^10.0.0",
+    "browserify": "^17.0.0",
     "colors": "^1.3.3",
     "eslint": "^5.16.0",
     "eslint-plugin-node": "^9.0.1",
@@ -44,5 +48,26 @@
       "bem": false
     }
   },
-  "dependencies": {}
+  "dependencies": {
+    "rat-slider": "^0.1.28",
+    "swiper": "^8.0.7"
+  },
+  "parserOptions": {
+    "sourceType": "script",
+    "ecmaVersion": 11
+
+  }, 
+  "browserify": {
+    "transform": [
+      [
+        "babelify",
+        {
+          "presets": [
+            "@babel/preset-env"
+          ]
+        }
+      ]
+    ]
+  }
+  
 }
