--- a/package.json
+++ b/package.json
@@ -44,5 +44,10 @@
       "bem": false
     }
   },
-  "dependencies": {}
+  "dependencies": {
+    "swiper": "^8.3.2"
+  },
+   "rules" : {
+    "no-unused-vars": "off"
+  }
 }
