--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "reset": "^0.1.0",
-    "reset.scss": "^1.0.0"
+    "reset.scss": "^1.0.0",
+    "swiper": "^8.3.2"
   }
 }
