--- a/package.json
+++ b/package.json
@@ -45,5 +45,13 @@
       "bem": false
     }
   },
-  "dependencies": {}
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/diolna/layout_museum.git"
+  },
+  "bugs": {
+    "url": "https://github.com/diolna/layout_museum/issues"
+  },
+  "homepage": "https://github.com/diolna/layout_museum#readme"
 }
