--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@mate-academy/bemlint": "^0.1.1",
     "@mate-academy/eslint-config": "*",
     "@mate-academy/linthtml-config": "0.0.2",
-    "@mate-academy/scripts": "^0.9.14",
+    "@mate-academy/scripts": "^1.2.8",
     "@mate-academy/stylelint-config": "0.0.9",
     "colors": "^1.3.3",
     "eslint": "^5.16.0",
@@ -44,5 +44,8 @@
       "bem": false
     }
   },
-  "dependencies": {}
+  "dependencies": {
+    "@babel/core": "^7.22.9",
+    "jquery": "^3.7.0"
+  }
 }
