--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gulp-boilerplate",
+  "name": "Miami",
   "version": "1.0.0",
-  "description": "Frontend boilerplate based on gulp",
+  "description": "Miami landing page",
   "main": "index.js",
   "scripts": {
     "init": "mate-scripts init",
@@ -22,15 +22,16 @@
     "@mate-academy/bemlint": "^0.1.1",
     "@mate-academy/eslint-config": "*",
     "@mate-academy/linthtml-config": "0.0.2",
-    "@mate-academy/scripts": "^0.9.14",
-    "@mate-academy/stylelint-config": "0.0.9",
+    "@mate-academy/scripts": "^1.2.8",
+    "@mate-academy/stylelint-config": "*",
     "colors": "^1.3.3",
     "eslint": "^5.16.0",
     "eslint-plugin-node": "^9.0.1",
     "gh-pages": "2.0.0",
     "gulp-htmllint": "0.0.16",
+    "jest": "^27.3.1",
     "node-sass": "^4.14.1",
-    "parcel": "1.12.3",
+    "parcel": "^1.12.4",
     "stylelint": "^13.5.0",
     "stylelint-config-recommended-scss": "^3.3.0",
     "stylelint-scss": "^3.17.2"
@@ -43,6 +44,5 @@
     "linters": {
       "bem": false
     }
-  },
-  "dependencies": {}
+  }
 }
