--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-node": "^9.0.1",
     "gh-pages": "2.0.0",
     "gulp-htmllint": "0.0.16",
+    "jest": "^29.7.0",
     "node-sass": "^4.14.1",
     "parcel": "1.12.3",
     "stylelint": "^13.5.0",
