--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@mate-academy/bemlint": "^0.1.1",
     "@mate-academy/eslint-config": "*",
     "@mate-academy/linthtml-config": "0.0.2",
-    "@mate-academy/scripts": "^1.2.8",
+    "@mate-academy/scripts": "^1.2.9",
     "@mate-academy/stylelint-config": "0.0.9",
     "colors": "^1.3.3",
     "eslint": "^5.16.0",
@@ -45,7 +45,6 @@
     }
   },
   "dependencies": {
-    "@babel/core": "^7.23.2",
-    "swiper": "^11.0.2"
+    "@babel/core": "^7.23.3"
   }
 }
