--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "@mate-academy/bemlint": "^0.1.1",
     "@mate-academy/eslint-config": "*",
     "@mate-academy/linthtml-config": "*",
-    "@mate-academy/scripts": "^1.2.12",
+    "@mate-academy/scripts": "^1.2.8",
     "@mate-academy/stylelint-config": "^0.0.11",
     "@parcel/transformer-sass": "2.10.2",
     "backstopjs": "^6.2.2",
     "eslint": "^8.52.0",
     "eslint-plugin-node": "^11.1.0",
     "jest": "^29.7.0",
-    "parcel": "2.10.2",
+    "parcel": "^1.12.3",
     "stylelint": "^15.11.0"
   },
   "browserslist": [
@@ -41,5 +41,20 @@
       "bem": false
     }
   },
-  "dependencies": {}
+  "dependencies": {
+    "events": "^3.3.0",
+    "normalize.css": "^8.0.1",
+    "postcss": "^8.3.3",
+    "postcss-safe-parser": "^7.0.0",
+    "stylelint-config-sass-guidelines": "^10.0.0"
+  },
+  "main": ".eslintrc.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BOHDANLIUYUI/Museum.git"
+  },
+  "bugs": {
+    "url": "https://github.com/BOHDANLIUYUI/Museum/issues"
+  },
+  "homepage": "https://github.com/BOHDANLIUYUI/Museum#readme"
 }
