--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@mate-academy/bemlint": "^0.1.1",
     "@mate-academy/eslint-config": "*",
     "@mate-academy/linthtml-config": "*",
-    "@mate-academy/scripts": "^1.2.12",
+    "@mate-academy/scripts": "^1.2.8",
     "@mate-academy/stylelint-config": "^0.0.11",
     "@parcel/transformer-sass": "2.10.2",
     "backstopjs": "^6.2.2",
@@ -30,6 +30,7 @@
     "eslint-plugin-node": "^11.1.0",
     "jest": "^29.7.0",
     "parcel": "^1.12.3",
+    "sass": "^1.69.6",
     "stylelint": "^15.11.0"
   },
   "browserslist": [
