--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@linthtml/linthtml": "^0.9.5",
     "@mate-academy/backstop-config": "latest",
     "@mate-academy/bemlint": "latest",
-    "@mate-academy/eslint-config": "latest",
+    "@mate-academy/eslint-config": "0.0.28",
     "@mate-academy/linthtml-config": "latest",
-    "@mate-academy/scripts": "^1.7.1",
+    "@mate-academy/scripts": "^1.7.3",
     "@mate-academy/stylelint-config": "latest",
     "@parcel/transformer-sass": "2.10.2",
     "backstopjs": "^6.2.2",
