--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gulp-boilerplate",
   "version": "1.0.0",
   "description": "Frontend boilerplate based on gulp",
-  "homepage": "https://mykhailonl.github.io/Museum/",
+  "homepage": "https://mykhailonl.github.io/Museum",
   "scripts": {
     "init": "mate-scripts init",
     "start": "mate-scripts start",
