--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "gulp-boilerplate",
   "version": "1.0.0",
   "description": "Frontend boilerplate based on gulp",
-  "main": "index.js",
   "scripts": {
     "init": "mate-scripts init",
     "start": "mate-scripts start",
@@ -18,21 +17,23 @@
   "author": "Mate Academy",
   "license": "GPL-3.0",
   "devDependencies": {
-    "@babel/core": "^7.24.4",
-    "@linthtml/linthtml": "^0.8.3",
-    "@mate-academy/bemlint": "^0.1.1",
+    "@linthtml/linthtml": "^0.9.5",
+    "@mate-academy/bemlint": "latest",
     "@mate-academy/eslint-config": "*",
-    "@mate-academy/linthtml-config": "0.0.2",
-    "@mate-academy/scripts": "^1.2.8",
-    "@mate-academy/stylelint-config": "0.0.9",
+    "@mate-academy/linthtml-config": "latest",
+    "@mate-academy/scripts": "^1.7.3",
+    "@mate-academy/stylelint-config": "latest",
+    "@parcel/transformer-sass": "^2.12.0",
+    "jest": "^29.7.0",
     "colors": "^1.3.3",
     "eslint": "^5.16.0",
     "eslint-plugin-node": "^9.0.1",
     "gh-pages": "2.0.0",
     "gulp-htmllint": "0.0.16",
     "node-sass": "^4.14.1",
-    "parcel": "1.12.3",
-    "stylelint": "^13.5.0",
+    "parcel": "^2.12.0",
+    "prettier": "^3.2.5",
+    "stylelint": "^15.11.0",
     "stylelint-config-recommended-scss": "^3.3.0",
     "stylelint-scss": "^3.17.2"
   },
@@ -42,7 +43,11 @@
   "mateAcademy": {
     "projectType": "layout",
     "linters": {
+      "javascript": false,
       "bem": false
+    },
+    "tests": {
+      "backstop": false
     }
   },
   "dependencies": {}
