--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@mate-academy/bemlint": "latest",
     "@mate-academy/linthtml-config": "latest",
     "@mate-academy/scripts": "^1.8.6",
-    "@mate-academy/stylelint-config": "latest",
+    "@mate-academy/stylelint-config": "0.0.12",
     "@parcel/transformer-sass": "^2.12.0",
     "jest": "^29.7.0",
     "parcel": "^2.12.0",
