--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^8.52.0",
     "eslint-plugin-node": "^11.1.0",
     "jest": "^29.7.0",
+    "jest-html-reporters": "^3.1.7",
     "parcel": "2.10.2",
     "stylelint": "^15.11.0"
   },
