Create component: gallery

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     }
   },
   "dependencies": {
-    "@fancyapps/ui": "^5.0.36"
+    "@fancyapps/ui": "^5.0.36",
+    "swiper": "^11.1.15"
   }
 }
