--- a/package.json
+++ b/package.json
@@ -18,18 +18,18 @@
   "keywords": [],
   "author": "Mate Academy",
   "license": "GPL-3.0",
-  "dependencies": {},
   "devDependencies": {
     "@linthtml/linthtml": "^0.9.5",
     "@mate-academy/bemlint": "latest",
     "@mate-academy/linthtml-config": "latest",
-    "@mate-academy/scripts": "^1.7.3",
+    "@mate-academy/scripts": "^1.8.1",
     "@mate-academy/stylelint-config": "latest",
     "@parcel/transformer-sass": "^2.12.0",
     "jest": "^29.7.0",
     "parcel": "^2.12.0",
     "prettier": "^3.2.5",
-    "stylelint": "^15.11.0"
+    "stylelint": "^15.11.0",
+    "svgo": "^3.3.2"
   },
   "mateAcademy": {
     "projectType": "layout",
