fixed the errors in the code

--- a/package.json
+++ b/package.json
@@ -41,5 +41,11 @@
     "tests": {
       "backstop": false
     }
+  },
+  "rules": {
+    "selector-max-id": null,
+    "number-max-precision": 3,
+    "no-descending-specificity": null,
+    "no-duplicate-selectors": null
   }
 }
