--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "keywords": [],
   "author": "Mate Academy",
   "license": "GPL-3.0",
-  "dependencies": {},
   "devDependencies": {
     "@linthtml/linthtml": "^0.9.6",
     "@mate-academy/bemlint": "latest",
@@ -30,7 +29,8 @@
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.3.2",
     "stylelint": "^16.7.0",
-    "stylelint-scss": "^6.4.1"
+    "stylelint-scss": "^6.4.1",
+    "svgo": "^3.3.2"
   },
   "mateAcademy": {
     "projectType": "layout",
