--- a/package.json
+++ b/package.json
@@ -18,12 +18,11 @@
   "keywords": [],
   "author": "Mate Academy",
   "license": "GPL-3.0",
-  "dependencies": {},
   "devDependencies": {
     "@linthtml/linthtml": "^0.9.6",
     "@mate-academy/bemlint": "latest",
     "@mate-academy/linthtml-config": "latest",
-    "@mate-academy/scripts": "^1.8.6",
+    "@mate-academy/scripts": "^2.1.1",
     "@mate-academy/stylelint-config": "latest",
     "@parcel/transformer-sass": "^2.12.0",
     "jest": "^29.7.0",
@@ -41,5 +40,10 @@
     "tests": {
       "backstop": false
     }
+  },
+  "dependencies": {
+    "parcel": "^2.14.4",
+    "sass": "^1.86.3",
+    "swiper": "^11.2.6"
   }
 }
