--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "name": "gulp-boilerplate",
+  "name": "layout_landing-page",
   "version": "1.0.0",
-  "description": "Frontend boilerplate based on gulp",
+  "description": "Landing page",
   "scripts": {
     "init": "mate-scripts init",
     "start": "mate-scripts start",
-    "style-format": "npx stylelint 'src/**/*.scss' --fix",
-    "format": "prettier --ignore-path .prettierignore --write './src/**/*.{html,css,scss}'",
-    "lint": "npm run style-format && npm run format && mate-scripts lint",
+    "lint": "mate-scripts lint",
     "test:only": "mate-scripts test",
     "build": "mate-scripts build",
     "deploy": "mate-scripts deploy",
@@ -18,27 +16,30 @@
   "keywords": [],
   "author": "Mate Academy",
   "license": "GPL-3.0",
-  "dependencies": {},
   "devDependencies": {
     "@linthtml/linthtml": "^0.9.5",
-    "@mate-academy/bemlint": "latest",
-    "@mate-academy/linthtml-config": "latest",
-    "@mate-academy/scripts": "^1.7.3",
-    "@mate-academy/stylelint-config": "latest",
-    "@parcel/transformer-sass": "^2.12.0",
+    "@mate-academy/bemlint": "^0.1.1",
+    "@mate-academy/eslint-config": "*",
+    "@mate-academy/linthtml-config": "*",
+    "@mate-academy/scripts": "^1.2.12",
+    "@mate-academy/stylelint-config": "^0.0.11",
+    "@parcel/transformer-sass": "2.10.2",
+    "cypress": "^9.5.3",
+    "eslint": "^8.52.0",
+    "eslint-plugin-cypress": "^2.15.1",
+    "eslint-plugin-node": "^11.1.0",
     "jest": "^29.7.0",
-    "parcel": "^2.12.0",
-    "prettier": "^3.2.5",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0",
+    "parcel": "2.10.2",
     "stylelint": "^15.11.0"
   },
+  "browserslist": [
+    "last 2 versions"
+  ],
   "mateAcademy": {
-    "projectType": "layout",
-    "linters": {
-      "javascript": false,
-      "bem": false
-    },
-    "tests": {
-      "backstop": false
-    }
-  }
+    "projectType": "layoutDOM"
+  },
+  "dependencies": {}
 }
