--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "gulp-boilerplate",
+  "name": "museum",
   "version": "1.0.0",
-  "description": "Frontend boilerplate based on gulp",
+  "description": "museum",
   "scripts": {
     "init": "mate-scripts init",
     "start": "mate-scripts start",
-    "lint": "mate-scripts lint",
+    "style-format": "npx stylelint 'src/**/*.scss' --fix --allow-empty-input",
+    "format": "prettier --ignore-path .prettierignore --write './src/**/*.{html,css,scss}'",
+    "lint": "npm run style-format && npm run format && mate-scripts lint",
     "test:only": "mate-scripts test",
     "build": "mate-scripts build",
     "deploy": "mate-scripts deploy",
@@ -17,20 +19,26 @@
   "author": "Mate Academy",
   "license": "GPL-3.0",
   "devDependencies": {
-    "@linthtml/linthtml": "^0.9.5",
-    "@mate-academy/backstop-config": "^1.0.0",
-    "@mate-academy/bemlint": "^0.1.1",
-    "@mate-academy/eslint-config": "*",
-    "@mate-academy/linthtml-config": "*",
-    "@mate-academy/scripts": "^1.2.12",
-    "@mate-academy/stylelint-config": "^0.0.11",
-    "@parcel/transformer-sass": "2.10.2",
-    "backstopjs": "^6.2.2",
-    "eslint": "^8.52.0",
+    "@linthtml/linthtml": "^0.9.6",
+    "@mate-academy/eslint-config": "latest",
+    "@mate-academy/jest-mochawesome-reporter": "^1.0.0",
+    "@mate-academy/linthtml-config": "latest",
+    "@mate-academy/scripts": "^2.1.1",
+    "@mate-academy/stylelint-config": "latest",
+    "@parcel/transformer-sass": "^2.12.0",
+    "cypress": "^13.13.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-cypress": "^3.3.0",
     "eslint-plugin-node": "^11.1.0",
     "jest": "^29.7.0",
-    "parcel": "2.10.2",
-    "stylelint": "^15.11.0"
+    "jest-environment-jsdom": "^29.7.0",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0",
+    "mochawesome-report-generator": "^6.2.0",
+    "parcel": "^2.12.0",
+    "prettier": "^3.3.2",
+    "stylelint": "^16.7.0",
+    "stylelint-scss": "^6.4.1"
   },
   "browserslist": [
     "last 2 versions"
@@ -38,8 +46,13 @@
   "mateAcademy": {
     "projectType": "layout",
     "linters": {
+      "javascript": false,
       "bem": false
+    },
+    "tests": {
+      "jest": false,
+      "backstop": false,
+      "cypress": true
     }
-  },
-  "dependencies": {}
+  }
 }
